gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail15616d.d
version https://git-lfs.github.com/spec/v1
oid sha256:0e3beff1d7a0e399b182e4a490e5a5c68669a94faa5805923ba6c41e13733019
size 727
